# world-models

./: .env.example  .gitignore  CLAUDE.md  PYTHON-MVP-BUILD-PLAN.md  QUICKSTART.md  README.md  mcp_config.example.json  pyproject.toml
docs/: ULTRAPLAN-BRIEF.md  ULTRAPLAN-PROMPT.md
docs/design/: CROSS-LANGUAGE-PATTERNS.md  DAEMON-PATTERN-DIAGRAMS.md  EXOTIC-PATTERNS-DEEP-DIVE.md  LANGUAGE-EVALUATION.md  MVP-IMPLEMENTATION-BLUEPRINT.md  RUTHLESS-MVP.md
docs/research/: RHODA_DVA_INVESTIGATION.md  TIKTOK-RECOMMENDATION-SYSTEM-DEEP-DIVE.md  world-models-landscape.md
src/life_world_model/: __init__.py  cli.py  config.py  demo_data.py  types.py
src/life_world_model/analysis/: causal.py  narrator.py  pattern_discovery.py  proactive.py  suggestions.py
src/life_world_model/daemon/: bus.py  (+4 more)
swift/: .gitignore
swift/LWMMenuBar/: Package.swift
tests/: test_briefing.py  test_bucketizer.py  test_calendar.py  test_causal_graph.py  test_daemon.py  test_daemon_events.py  test_demo_mode.py  test_experiments.py  test_feedback.py  test_future_self.py  test_generator_prompt.py  test_git_activity.py  test_goals.py  test_knowledgec.py  test_mcp_server.py  test_monte_carlo.py  test_multi_objective.py  test_notifications.py  test_parallel_lives.py  test_pattern_decay.py  test_pattern_discovery.py  test_proactive_experiments.py  test_projector.py  test_recent_files.py  test_safari_history.py  test_scoring.py  test_screen_time.py  test_security.py  test_shell_history.py  test_signals.py  test_simulation.py  test_simulation_narrator.py  test_suggestions.py  test_voices.py  test_web.py
(+54 files in other folders)
